# multiplex

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.yaml
.github/workflows/: python-package.yml
src/multiplex/: __init__.py  actions.py  ansi.py  box.py  buffer.py  commands.py  controller.py  enums.py  exceptions.py  export.py  help.py  ipc.py  iterator.py  keys.py  keys_input.py  logging.py  main.py  multiplex.py  process.py  refs.py  resize.py  view_builder.py  viewer.py
tests/: kitchen.py  test_buffer.py  test_iterator.py  test_keys.py  test_keys_input.py  test_multiplex.py
tests/resources/: __init__.py
