[tool.poetry]
name = "multiplex"
version = "0.5.0"
description = "View output of multiple processes, in parallel, in the console, with an interactive TUI"
authors = ["Dan Kilman <dankilman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dankilman/multiplex"
repository = "https://github.com/dankilman/multiplex"

[tool.poetry.dependencies]
python = "^3.7"
aiostream = "^0.4.1"
easy-ansi = "^0.3"
pyte = "^0.8.0"
aiofiles = "^0.5.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ansicolors = "^1.1.8"
pytest = "^5.2"
black = "^20.8b1"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
mp = "multiplex.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
