[tool.poetry]
name = "multiplex"
version = "0.6.1"
description = "View output of multiple processes, in parallel, in the console, with an interactive TUI"
authors = ["Dan Kilman <dankilman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dankilman/multiplex"
repository = "https://github.com/dankilman/multiplex"

[tool.poetry.dependencies]
python = "^3.7"
aiostream = "^0.4.1"
easy-ansi = "^0.3"
pyte = "^0.8.0"
aiofiles = "^0.5.0"
click = ">=7.1.2"

[tool.poetry.dev-dependencies]
ansicolors = "^1.1.8"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
mp = "multiplex.main:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
